tests/cases/compiler/classHeritageWithTrailingSeparator.stderr
  × Syntax Error: Unexpected token ','
   ╭─[../../tests/cases/compiler/classHeritageWithTrailingSeparator.ts:2:18]
   ╰────
