tests/cases/compiler/classHeritageWithTrailingSeparator.ts
class C { foo: number }
class D extends C, { //~ ERROR: Syntax Error: Unexpected token ','
}